feat: auth middleware and session api
