# user/docs/swagger-ui/swagger.yaml
@@ -37,6 +37,24 @@ definitions:
     title: APIError is the error response for the API.
     type: object
     x-go-package: github.com/MortalHappiness/VaccineReservationSystem/user/internal/apierrors
+  PostSessionRequestModel:
+    properties:
+      healthCardID:
+        description: The user's healthCardID
+        example: "000011112222"
+        type: string
+        x-go-name: HealthCardID
+      nationID:
+        description: The user's nationID
+        example: A123456789
+        type: string
+        x-go-name: NationID
+    required:
+    - nationID
+    - healthCardID
+    title: PostSessionRequestModel is the body format of PostSessionRequest.
+    type: object
+    x-go-package: github.com/MortalHappiness/VaccineReservationSystem/user/internal/controllers/session
   UserModel:
     description: UserModel is the body format of UserResponse
     properties:
@@ -84,6 +102,7 @@ definitions:
         x-go-name: Vaccines
     required:
     - nationID
+    - healthCardID
     type: object
     x-go-package: github.com/MortalHappiness/VaccineReservationSystem/user/internal/controllers/user
 host: localhost:7712
@@ -105,6 +124,51 @@ paths:
       summary: Get Server API Specification
       tags:
       - Development
+  /api/session:
+    delete:
+      operationId: DelSession
+      responses:
+        "204":
+          $ref: '#/responses/NoContentResponse'
+      summary: Logout the user.
+      tags:
+      - Session
+    get:
+      operationId: GetSession
+      responses:
+        "200":
+          $ref: '#/responses/UserResponse'
+        "400":
+          $ref: '#/responses/BadRequestErrorResponse'
+        "401":
+          $ref: '#/responses/UnauthorizedErrorResponse'
+        "404":
+          $ref: '#/responses/NotFoundErrorResponse'
+        "500":
+          $ref: '#/responses/InternalServerErrorResponse'
+      summary: Get the user information.
+      tags:
+      - Session
+  /api/sessions:
+    post:
+      operationId: PostSessionRequest
+      parameters:
+      - in: body
+        name: body
+        required: true
+        schema:
+          $ref: '#/definitions/PostSessionRequestModel'
+        x-go-name: Body
+      responses:
+        "200":
+          $ref: '#/responses/SessionResponse'
+        "400":
+          $ref: '#/responses/BadRequestErrorResponse'
+        "500":
+          $ref: '#/responses/InternalServerErrorResponse'
+      summary: Login.
+      tags:
+      - Session
   /api/users:
     post:
       operationId: PostUserRequest
@@ -139,12 +203,14 @@ paths:
           $ref: '#/responses/UserResponse'
         "400":
           $ref: '#/responses/BadRequestErrorResponse'
+        "401":
+          $ref: '#/responses/UnauthorizedErrorResponse'
         "500":
           $ref: '#/responses/InternalServerErrorResponse'
       summary: Update a user.
       tags:
       - User
-  /api/users/:nation_id:
+  /api/users/:nationID:
     delete:
       operationId: DelUserRequest
       parameters:
@@ -172,6 +238,8 @@ paths:
           $ref: '#/responses/UserResponse'
         "400":
           $ref: '#/responses/BadRequestErrorResponse'
+        "401":
+          $ref: '#/responses/UnauthorizedErrorResponse'
         "404":
           $ref: '#/responses/NotFoundErrorResponse'
         "500":
@@ -194,8 +262,12 @@ responses:
     description: NotFoundErrorResponse is the response of not found error.
     schema:
       $ref: '#/definitions/APIError'
+  UnauthorizedErrorResponse:
+    description: UnauthorizedErrorResponse is the response of unauthorized error.
+    schema:
+      $ref: '#/definitions/APIError'
   UserResponse:
-    description: UserResponse is the response of GetUserV1
+    description: UserResponse is the response of GetUser/PostUser/PutUser.
     schema:
       $ref: '#/definitions/UserModel'
   emptyResponse:
