# user/internal/controllers/session/get_session.go
@@ -1,15 +1,17 @@
-package user
+package session
 
 import (
+	"errors"
 	"fmt"
 	"net/http"
 
 	"github.com/MortalHappiness/VaccineReservationSystem/user/internal/apierrors"
+	"github.com/MortalHappiness/VaccineReservationSystem/user/internal/controllers/user"
 	"github.com/gin-gonic/gin"
 )
 
-// GetUserByID returns the user information.
-// swagger:route GET /api/users/:nationID User GetUser
+// GetSession returns the user information.
+// swagger:route GET /api/session Session GetSession
 //
 // Get the user information.
 //
@@ -20,18 +22,14 @@ import (
 //   404: NotFoundErrorResponse
 //   500: InternalServerErrorResponse
 //
-func (u *User) GetUserByID(c *gin.Context) {
-	nationID := c.Param("nationID")
-
-	// verify user auth
-	err := u.AuthVerify(c, nationID)
-	if err != nil {
-		_ = c.Error(apierrors.NewUnauthorizedError(err))
+func (s *Session) GetSession(c *gin.Context) {
+	nationID, exists := c.Get("nationID")
+	if !exists {
+		_ = c.Error(apierrors.NewUnauthorizedError(errors.New("no token provided")))
 		return
 	}
 
-	// get user info
-	row, err := u.vaccineClient.GetUser(nationID)
+	row, err := s.vaccineClient.GetUser(nationID.(string))
 	if err != nil {
 		_ = c.Error(apierrors.NewInternalServerError(fmt.Errorf("failed to get user: %w", err)))
 		return
@@ -40,7 +38,7 @@ func (u *User) GetUserByID(c *gin.Context) {
 		_ = c.Error(apierrors.NewNotFoundError(fmt.Errorf("user %s not found", nationID)))
 		return
 	}
-	user, err := ConvertRowToUserModel(nationID, row)
+	user, err := user.ConvertRowToUserModel(nationID.(string), row)
 	if err != nil {
 		_ = c.Error(apierrors.NewInternalServerError(fmt.Errorf("failed to convert row to user: %w", err)))
 		return
