# user/internal/router/router.go
@@ -6,7 +6,6 @@ import (
 
 // MakeRouter implements API SPEC.
 func MakeRouter(opt *Options) *gin.Engine {
-	gin.DisableConsoleColor()
 	var router *gin.Engine
 	if opt.Env.AccessLog {
 		router = gin.Default()
@@ -14,13 +13,19 @@ func MakeRouter(opt *Options) *gin.Engine {
 		router = gin.New()
 		router.Use(gin.Recovery())
 	}
+
 	api := router.Group("/api")
 	{
 		api.Use(opt.errorCollectorMiddleware)
-		api.GET("/users/:nation_id", opt.userController.GetUserByID)
+		// users
+		api.GET("/users/:nationID", opt.authMiddleware, opt.userController.GetUserByID)
 		api.POST("/users", opt.userController.PostUser)
-		api.PUT("/users/:nation_id", opt.userController.PutUser)
-		api.DELETE("/users/:nation_id", opt.userController.DelUser)
+		api.PUT("/users/:nationID", opt.authMiddleware, opt.userController.PutUser)
+		api.DELETE("/users/:nationID", opt.userController.DelUser)
+		// session
+		api.GET("/session", opt.authMiddleware, opt.sessionController.GetSession)
+		api.POST("/session", opt.sessionController.PostSession)
+		api.DELETE("/session", opt.authMiddleware, opt.sessionController.DelSession)
 	}
 	// API Spec Swagger UI
 	{
